--- a/index.html
+++ b/index.html
@@ -319,18 +319,18 @@
                 </div>
                 <div class="page4card">
                     <img src="./assets/timeicon.png" alt="" style="width: 36px; height: 36px;">
-                    <h1>199 +</h1>
-                    <span>Staticfied Customers</span>
+                    <h1>1591+</h1>
+                    <span>Days Of Operation</span>
                 </div>
                 <div class="page4card">
                     <img src="./assets/tickicon.png" alt="" style="width: 35px; height: 35px;">
-                    <h1>199 +</h1>
-                    <span>Staticfied Customers</span>
+                    <h1>283 +</h1>
+                    <span>Complete Project</span>
                 </div>
                 <div class="page4card">
                     <img src="./assets/trophyicon.png" alt="" style="width: 37px; height: 30px;">
-                    <h1>199 +</h1>
-                    <span>Staticfied Customers</span>
+                    <h1>75+</h1>
+                    <span>Win Awards</span>
                 </div>
             </div>
       </section>
